# nvshmem_demo

./: CMakeLists.txt  client.cu  client1.cu  demo1.cu  get_env.cu  log1.txt  readme.txt  server.cu  server1.cu
